# Juno

./: .gitignore  CHANGELOG.md  CREDITS.md  Cargo.toml  EULA.md  LICENSE  README.md  RunJuniEditor.command  netlify.toml  sitemap.xml  wrangler.toml
.github/workflows/: ci.yml  release-android.yml  release-desktop.yml
1_root_crates/: CREDITS.md  README.md
1_root_crates/desktop/src-tauri/: tauri.conf.json
1_root_crates/scripts/: check-engine-examples.sh  check-examples.sh
2_ide_runtime/ide/src/: juni-runtime.ts  lsp-client.ts  main.ts  project-persist.ts  style.css  vite-env.d.ts
2_ide_runtime/runtime/: browser.js  tsconfig.json
2_ide_runtime/runtime/src/: audio.ts  gltf.ts  scene-loader.ts  scene3d.ts  types.ts
3_docs_examples/docs/src/: intro.md
3_docs_examples/examples/: hello_world.juni  loop.juni  vec2_demo.juni
_github_upload/: CREDITS.md  Cargo.toml  LICENSE  README.md
_github_upload/.github/workflows/: pages.yml
_github_upload/crates/juni-wasm/: Cargo.toml
_github_upload/crates/juni-wasm/src/: lib.rs
_github_upload/docs/src/: intro.md
_github_upload/examples/: structs.juni
_github_upload/ide/: index.html  package.json
_github_upload/ide/src/: juni-lang.ts  main.ts  vite-env.d.ts
_github_upload/runtime/: package.json
_github_upload/tests/compile/: ok_arith.juni
android-twa/: .gitignore  README.md  twa-manifest.json
crates/juni-check/: Cargo.toml
crates/juni-check/src/: borrow.rs  diag.rs  generics.rs  hir.rs  lib.rs  program.rs  types.rs
crates/juni-cli/: Cargo.toml
crates/juni-cli/src/: main.rs
crates/juni-codegen/: Cargo.toml
crates/juni-codegen/src/: allocator.rs  lib.rs  notice.rs
crates/juni-driver/: Cargo.toml
crates/juni-driver/src/: assets.rs  discover.rs  lib.rs  manifest.rs  resolve.rs
crates/juni-driver/tests/projects/hello_modules/: juni.toml
crates/juni-driver/tests/projects/hello_modules/src/: main.juni  math.juni
crates/juni-lsp/: Cargo.toml
crates/juni-lsp/src/: lib.rs  server.rs  symbols.rs  workspace.rs
crates/juni-syntax/: Cargo.toml
crates/juni-syntax/src/: ast.rs  lexer.rs  parser.rs  span.rs
crates/juni-wasm/: Cargo.toml
crates/juni-wasm/src/: lib.rs
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: book.toml
docs/src/: SUMMARY.md  intro.md
docs/src/engine/: animation.md  editor.md  intrinsics.md  jscene.md  level.md  overview.md  scripts.md
docs/src/graphics/: 2d.md  3d.md  overview.md
docs/src/language/: generics.md  memory.md  modules.md  physics.md  state.md  stdlib.md  syntax.md  types.md
docs/src/projects/: ai-assistant.md  assets.md  audio.md  cat-coffee.md  cloudflare.md  desktop.md  export-web.md  juni-toml.md  licensing.md  netlify.md  physics.md  tutorials.md
docs/src/tutorials/: platformer.md
docs/src/webgpu/: runtime.md
examples/: canvas2d_bounce.juni  canvas2d_hello.juni  canvas2d_lines.juni  game_paddle.juni  math_demo.juni  scene3d_cube.juni  webgpu_triangle.juni
examples/projects/audio_demo/: JUNI.NOTICE  build.wasm  juni.toml
examples/projects/canvas_sprite/: build.wasm  canvas_sprite.wasm  juni.toml
examples/projects/hello_modules/: build.wasm  juni.toml
examples/projects/paddle_physics/: build.wasm  (+1 more)
ide/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite-kuni-plugin.ts  vite.config.ts
ide/public/: _redirects  ai-docs-index.json  manifest.webmanifest  sitemap.xml  sw.js
ide/src/: anim-editor.ts  cat-coffee.ts  code-search.ts  completion-lite.ts  credits.ts  docs-index.ts  export-web.ts  file-tree.ts  juni-lang.ts  juni-notice.ts  juni-runtime.ts  layout-resize.ts  legal.ts  lsp-client.ts  main.ts  project-persist.ts  project-store.ts  style.css  tab-editor.ts  tutorials.ts  ui-theme.ts  vite-env.d.ts  zip-write.ts
kuni/: README.md  capacitor.config.json  index.html  package-lock.json  package.json  vite.config.ts
kuni/android/: README.md
kuni/desktop/: package-lock.json  package.json
kuni/desktop/src-tauri/: Cargo.toml  tauri.conf.json
kuni/desktop/src-tauri/capabilities/: default.json
kuni/desktop/src-tauri/src/: lib.rs  main.rs
kuni/public/: manifest.webmanifest
kuni/src/: chat.ts  main.ts  style.css
runtime/: anim.check.mjs  browser.js  env.js  host.js  package-lock.json  package.json  physics3d.check.mjs  scripts-collision-events.check.mjs  webgpu_stubs.js
runtime/src/: assets.ts  audio.ts  browser.ts  canvas.ts  engine.ts  env.ts  gltf.ts  index.ts  input.ts  math.ts  memory.ts  physics.ts  render2d.ts  scene-loader.ts  scene3d.ts  scripts.ts  types.ts  world.ts
scripts/: build-ai-docs-index.mjs  check-engine-examples.sh  check-projects.sh  generate-tutorial-tts.mjs  package-itch-game.sh  smoke-hosted.sh  smoke-lsp.sh
stdlib/engine/: entity.juni
tests/compile/: fail_type.juni
(+97 files in other folders)
