[package]
name = "juni-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Juni project driver: juni.toml, module graph, discovery"

[features]
default = ["import-ast"]
import-ast = []

[dependencies]
juni-syntax.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror.workspace = true
toml = "1"

[dev-dependencies]
tempfile = "3"
juni-check = { workspace = true }
juni-codegen = { workspace = true }
