[package]
name = "juni-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Juni language server: completion and go-to-definition from juni.toml workspaces"

[features]
default = ["server"]
server = ["dep:tower-lsp", "dep:tokio"]

[dependencies]
juni-driver.workspace = true
juni-syntax.workspace = true
juni-check.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"], optional = true }

[dev-dependencies]
tempfile = "3"
