[package]
name = "juni-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Juni compiler for the browser (wasm-bindgen)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
juni-syntax.workspace = true
juni-check.workspace = true
juni-codegen.workspace = true
wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
base64.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
