[package]
name = "kuni-desktop"
version = "1.0.0"
description = "Kuni desktop shell — local AI on KunoEngine"
authors = ["Kuni Contributors"]
edition = "2021"

[lib]
name = "kuni_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
